Add empty functions needed for the game to play

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   </head>
   <body>
     <script>
-      
+      // Computer will randomly choose between RPS
+      function getComputerChoice() {
+        
+      }
+
+      console.log(getComputerChoice());
+
+      // Plays a round of RPS between Human and Computer
+      function playRound(playerSelection, computerSelection) {
+
+      }
+
+      // Plays a game of 5 rounds of RPS
+      function playGame() {
+
+      }
     </script>
   </body>
 </html>
