Complete functionality for getComputerChoice

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script>
       // Computer will randomly choose between RPS
       function getComputerChoice() {
-        
+        const choices = ["Rock", "Paper", "Scissors"];
+
+        return choices[Math.floor(Math.random() * 3)];
       }
 
       console.log(getComputerChoice());
