--- a/index.html
+++ b/index.html
@@ -3,71 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./index.js" defer></script>
   </head>
   <body>
-    <script>
-      // Computer will randomly choose between RPS
-      function getComputerChoice() {
-        const choices = ["ROCK", "PAPER", "SCISSORS"];
-
-        return choices[Math.floor(Math.random() * 3)];
-      }
-
-      // Plays a round of RPS between Human and Computer
-      function playRound(playerSelection, computerSelection) {
-        playerSelection = playerSelection.toUpperCase();
-        
-        switch(playerSelection) {
-          case "ROCK":
-            if(computerSelection === "ROCK") {
-              return "Draw! Try again!"
-              break;
-            } else if(computerSelection === "PAPER") {
-              return "You Lose! Rock loses to Paper!"
-              break;
-            } else {
-              return "You Win! Rock beats Scissors!"
-              break;
-            }
-          case "PAPER":
-            if(computerSelection === "ROCK") {
-              return "You Win! Paper beats Rock!"
-              break;
-            } else if(computerSelection === "PAPER") {
-              return "Draw! Try again!"
-              break;
-            } else {
-              return "You Lose! Paper loses to Scissors!"
-              break;
-            }
-          case "SCISSORS":
-            if(computerSelection === "ROCK") {
-              return "You Lose! Scissors loses to Rock!"
-              break;
-            } else if(computerSelection === "PAPER") {
-              return "You Win! Scissors beats Paper!"
-              break;
-            } else {
-              return "Draw! Try again!"
-              break;
-            }
-          default:
-            return "That is not a valid choice, Please enter Rock, Paper, or Scissors!"
-            break;
-        }
-      }    
-
-      // Plays a game of 5 rounds of RPS
-      function playGame() {
-        console.log(playRound("rOcK", getComputerChoice()));
-        console.log(playRound("sCissors", getComputerChoice()));
-        console.log(playRound("rock", getComputerChoice()));
-        console.log(playRound("DOG", getComputerChoice()));
-        console.log(playRound("PAPER", getComputerChoice()));
-      }
-
-      console.log(playGame());
-    </script>
+    <div>
+      <span id="player-score">wins: 0</span>
+      <span id="result"></span>
+      <span id="comp-score">loses: 0</span>
+    </div>
+    <div id="choices">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+    <div>
+      <button id="reset">Play Again</button>
+    </div>
   </body>
 </html>
